--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /laskarit/viikko2/Maksukortti/nbproject/
 /laskarit/viikko2/Maksukortti/target/
 /Menuplanner/target/
+/laskarit/viikko2/Unicafe/target
