--- a/Menuplanner/pom.xml
+++ b/Menuplanner/pom.xml
@@ -45,6 +45,11 @@
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
             <version>0.8.3</version>
+            <configuration>
+        <excludes>
+            <exclude>**/*UI*</exclude>
+        </excludes>
+        </configuration>
             <executions>
                 <execution>
                     <id>default-prepare-agent</id>
