muokattu config.properties niin että siellä on oletusreseptit ajettavaksi uuteen tietokantaan

--- a/Menuplanner/config.properties
+++ b/Menuplanner/config.properties
@@ -1,3 +1,9 @@
+// default name of user database
 usersDataBase = users
+
+// default proteins and sides
 proteins = liha,kana,kala,kasvis
-sides = pasta,riisi,peruna,keitto
+sides = pasta,riisi,peruna,keitto,leipä
+
+// initial recipes in a new users database
+recipes = makaronilaatikko,liha,pasta,soijalasagne,kasvis,pasta,kalakeitto,kala,keitto,nakkikeitto,liha,keitto,tonnikala-pastavuoka,kala,pasta,jansoninkiusaus,kala,peruna,lihapullat ja muusi,liha,peruna,nyhtökauracurry,kasvis,riisi,kanankoivet riisipedillä,kana,riisi,kasvissosekeitto,kasvis,keitto,valkopapupasta,kasvis,pasta,pyttipannu,liha,peruna
