--- a/Menuplanner/pom.xml
+++ b/Menuplanner/pom.xml
@@ -42,6 +42,19 @@
             <version>2.5</version>
         </plugin>
         <plugin>
+        <!-- Build an executable JAR -->
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>2.4</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>ohte.main.Main</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
+        <plugin>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
             <version>0.8.3</version>
@@ -80,6 +93,6 @@
             <artifactId>maven-jxr-plugin</artifactId>
             <version>2.5</version>
           </plugin>
-    </plugins>
+        </plugins>
 </build>
 </project>
