--- a/Menuplanner/config.properties
+++ b/Menuplanner/config.properties
@@ -5,5 +5,5 @@ usersDataBase = users
 proteins = liha,kana,kala,kasvis
 sides = pasta,riisi,peruna,keitto,leipä
 
-// initial recipes in a new users database
+// initial recipes in a new users database --> format: <name>,<protein>,<side>
 recipes = makaronilaatikko,liha,pasta,soijalasagne,kasvis,pasta,kalakeitto,kala,keitto,nakkikeitto,liha,keitto,tonnikala-pastavuoka,kala,pasta,jansoninkiusaus,kala,peruna,lihapullat ja muusi,liha,peruna,nyhtökauracurry,kasvis,riisi,kanankoivet riisipedillä,kana,riisi,kasvissosekeitto,kasvis,keitto,valkopapupasta,kasvis,pasta,pyttipannu,liha,peruna
