lisätty config tiedostoon lisukevaihtoehto kasvis

--- a/Menuplanner/config.properties
+++ b/Menuplanner/config.properties
@@ -3,7 +3,7 @@ usersDataBase = users
 
 // default proteins and sides
 proteins = liha,kana,kala,kasvis
-sides = pasta,riisi,peruna,keitto,leipä
+sides = pasta,riisi,peruna,keitto,leipä,kasvis
 
 // initial recipes in a new users database --> format: <name>,<protein>,<side>
-recipes = makaronilaatikko,liha,pasta,soijalasagne,kasvis,pasta,kalakeitto,kala,keitto,nakkikeitto,liha,keitto,tonnikala-pastavuoka,kala,pasta,jansoninkiusaus,kala,peruna,lihapullat ja muusi,liha,peruna,nyhtökauracurry,kasvis,riisi,kanankoivet riisipedillä,kana,riisi,kasvissosekeitto,kasvis,keitto,valkopapupasta,kasvis,pasta,pyttipannu,liha,peruna
+recipes = makaronilaatikko,liha,pasta,soijalasagne,kasvis,pasta,kalakeitto,kala,keitto,nakkikeitto,liha,keitto,tonnikala-pastavuoka,kala,pasta,jansoninkiusaus,kala,peruna,lihapullat ja muusi,liha,peruna,nyhtökauracurry,kasvis,riisi,kanankoivet riisipedillä,kana,riisi,kasvissosekeitto,kasvis,keitto,valkopapupasta,kasvis,pasta,pyttipannu,liha,peruna,moussaka,liha,kasvis,kaalilaatikko,liha,kasvis
