--- a/Menuplanner/pom.xml
+++ b/Menuplanner/pom.xml
@@ -68,6 +68,7 @@
             <configuration>
         <excludes>
             <exclude>**/*UI*</exclude>
+            <exclude>**/*Main*</exclude>
         </excludes>
         </configuration>
             <executions>
